--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,60 @@
-body{
-    background-color: steelblue;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,500;1,700&family=Work+Sans:ital,wght@0,400;0,700;0,800;1,800&display=swap');
+
+/* shared style */
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+/* header section style */
+.Gamer-header{
+    width: 100%;
+    height: 100px;
+}
+
+.gamer-nav-container{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+
+.gamer-logo{
+    display: flex;
+    align-items: center;
+}
+.gamer-title{
+    text-align: center;
+    font-size: 45px;
+    font-weight: 700;
+    padding-left: 5px;
+}
+.gamer-g{
+    color:#FF42A5 ;
+}
+.gamer-content {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    width: 500px;
+}
+.gamer-content ul{
+    display: flex;
+    gap: 40px;
+}
+.gamer-content li{
+    list-style: none;
+    font-weight: 500;
+    font-size: 18px;
+}
+.gamer-content a{
+    text-decoration: none;
+    color: #3C354F;
+}
+.gamer-follow{
+    padding-right: 20px;
+    border-radius: 8px;
+    background: rgba(11, 2, 35, 0.10);
+    padding: 20px;
+    margin-top: -20px;
+}
+
