--- a/styles/style.css
+++ b/styles/style.css
@@ -58,3 +58,67 @@
     margin-top: -20px;
 }
 
+/* Banner style start */
+
+.gamer-banner{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+.gamer-banner-content{
+    background-image: url('/images/Group\ 14.png');
+    background-repeat: no-repeat;
+    height: 500px;
+    text-align: start;
+    padding-top: 90px;
+    padding-left: 60px;
+
+}
+.gamer-banner-title{
+    color: #0B0223;
+    font-size: 30px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.gamer-banner-animal{
+    font-size: 55px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.gamer-banner-description{
+    color: #534C64;
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: lowercase;
+    text-align: start;
+    margin-bottom: 10px;
+}
+.signin {
+    background-color:#FF42A5 ;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 20px;
+    border-radius:40px ;
+    border: none;
+}
+.gorough{
+    background: #4EC5F7;
+    color: #FFF;
+    border-radius: 40px;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 20px;
+    border: none;
+}
+.gamer-banner-images{
+    align-items: center;
+    margin-left: -200px;
+}
+
+
+/*  */
