fix some issues in team section"

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -33,6 +33,7 @@
         width: 100%;
         margin: auto;
     }
+    /* gamer teams section */
     .gamer-teams-container{
         flex-direction: column;
         margin-top: 20px;
