--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -56,4 +56,14 @@
         font-size: 20px;
         font-weight: 700;
     }
+
+    /* gamer online game */
+    .gamer-online-games{
+        margin-top: 30px;
+    }
+    .gamer-funny-video-cards{
+        grid-template-columns: 1fr;
+        margin: auto;
+    }
+
 }
