--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -66,4 +66,10 @@
         margin: auto;
     }
 
+    .gamer--action-container{
+        grid-template-columns: repeat( 3,1fr );
+        justify-content: space-around                ;
+    }
+    
+
 }
