--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body{
 }
 /* header section style */
 .Gamer-header{
-    width: 1400px;
+   max-width: 1400px;
 }
 .gamer-header-container{
     margin-bottom: 0px;
@@ -146,7 +146,7 @@ body{
 
 /* gamer teams styles */
 .gamer-teams{
-    width: 1400px;
+    max-width: 1400px;
     margin-top: -20px;
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
 }
@@ -220,7 +220,7 @@ body{
 }
 /* online game section */
 .gamer-online-games{
-    width: 1400px;
+    max-width: 1400px;
 }
 .gamer-online-game-title{
     color: #0B0223;
@@ -266,7 +266,7 @@ body{
 /*  gamer-play-style*/
 .gamer-play-section{
     margin-top: 100px;
-    width: 1400px;
+    max-width: 1400px;
 }
 .gamer-play-container{
     display: flex;
@@ -326,3 +326,92 @@ body{
 }
 
 /* gamer-action style */
+.gamer-action{
+    max-width: 1400px;
+    margin-top: 400px;
+    margin-bottom: 100px;
+   
+}
+.gamer--action-container{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    margin-left: 240px;
+
+}
+.gamer-action-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px solid red; */
+    width: 243px;
+    height: 80px;
+    gap:10px;
+    /* border-radius: 50px; */
+    background: #FFF;
+    /* border: none; */
+
+}
+.gamer-action-box:hover{
+    border: 2px solid red;
+    border-radius: 50px;
+
+}
+
+/* footer section style */
+
+.footer{
+    max-width: 1450px;
+    height: 405px;
+    background: #0B0223;
+    padding-top: 100px;
+    justify-content: center;
+   
+}
+.gamer-logo{
+    justify-content: center;
+    margin-bottom: 40px;
+    /* margin-left: auto; */
+}
+.gamer-logo h3{
+    font-size: 45px;
+}
+.gamer-title-footer{
+    color: #FFF;
+    margin-left: 20px;
+}
+.footer-nav{
+    text-align: center;
+}
+.footer-nav ul{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+.footer-nav li{
+    text-align: center;
+    list-style: none;
+}
+.footer-nav a{
+    color: #FFF;
+    text-decoration: none;
+    color: #FFF;
+    text-align: center;
+    font-size: 18px;    
+    font-weight: 600;
+}
+.footer-icon{ 
+   display: flex;
+   justify-content: center;
+   gap: 20px;
+   margin-top: 20px;
+}
+.icon{
+     width: 40px;
+    height: 40px;
+    font-size: 30px;
+}
+.copy-right{
+    color: #ffff;
+    text-align: center;
+    margin-top: 20px;
+}
