--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body{
 }
 /* header section style */
 .Gamer-header{
-   max-width: 1400px;
+   max-width: 100%;
 }
 .gamer-header-container{
     margin-bottom: 0px;
@@ -146,7 +146,7 @@ body{
 
 /* gamer teams styles */
 .gamer-teams{
-    max-width: 1400px;
+    max-width: 100%;
     margin-top: -20px;
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
 }
@@ -220,7 +220,7 @@ body{
 }
 /* online game section */
 .gamer-online-games{
-    max-width: 1400px;
+    max-width: 100%;
 }
 .gamer-online-game-title{
     color: #0B0223;
@@ -266,7 +266,7 @@ body{
 /*  gamer-play-style*/
 .gamer-play-section{
     margin-top: 100px;
-    max-width: 1400px;
+    max-width: 100%;
 }
 .gamer-play-container{
     display: flex;
@@ -327,7 +327,7 @@ body{
 
 /* gamer-action style */
 .gamer-action{
-    max-width: 1400px;
+    max-width: 100%;
     margin-top: 400px;
     margin-bottom: 100px;
    
@@ -360,7 +360,7 @@ body{
 /* footer section style */
 
 .footer{
-    max-width: 1450px;
+    max-width: 100;
     height: 405px;
     background: #0B0223;
     padding-top: 100px;
